--- a/Master/Master.ipynb
+++ b/Master/Master.ipynb
@@ -861,34 +861,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyntcloud in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (0.3.1)\n",
+      "Requirement already satisfied: scipy in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (1.11.2)\n",
+      "Requirement already satisfied: numpy-stl in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (3.0.1)\n",
+      "Collecting opencv-python\n",
+      "  Obtaining dependency information for opencv-python from https://files.pythonhosted.org/packages/f5/d0/2e455d894ec0d6527e662ad55e70c04f421ad83a6fd0a54c3dd73c411282/opencv_python-4.8.0.76-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
+      "  Using cached opencv_python-4.8.0.76-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: numpy in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from pyntcloud) (1.26.0)\n",
+      "Requirement already satisfied: pandas in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from pyntcloud) (2.1.1)\n",
+      "Requirement already satisfied: python-utils>=3.4.5 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from numpy-stl) (3.8.0)\n",
+      "Requirement already satisfied: typing-extensions>3.10.0.2 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from python-utils>=3.4.5->numpy-stl) (4.8.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from pandas->pyntcloud) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from pandas->pyntcloud) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from pandas->pyntcloud) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/ashikh/Documents/Projects/NoticeBoard/.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->pyntcloud) (1.16.0)\n",
+      "Using cached opencv_python-4.8.0.76-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (61.7 MB)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.8.0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyntcloud scipy numpy-stl opencv-python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'numpy_stl' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ashikh.a\\Downloads\\FoodSeg\\Master.ipynb Cell 10\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ashikh.a/Downloads/FoodSeg/Master.ipynb#X10sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m hull \u001b[39m=\u001b[39m ConvexHull(cloud\u001b[39m.\u001b[39mpoints\u001b[39m.\u001b[39mvalues)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ashikh.a/Downloads/FoodSeg/Master.ipynb#X10sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Create a mesh from the convex hull\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/ashikh.a/Downloads/FoodSeg/Master.ipynb#X10sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m mesh1 \u001b[39m=\u001b[39m mesh\u001b[39m.\u001b[39;49mMesh(np\u001b[39m.\u001b[39;49mcolumn_stack(hull\u001b[39m.\u001b[39;49mpoints[hull\u001b[39m.\u001b[39;49mvertices]))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ashikh.a/Downloads/FoodSeg/Master.ipynb#X10sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39m# Calculate the volume of the mesh\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ashikh.a/Downloads/FoodSeg/Master.ipynb#X10sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m volume \u001b[39m=\u001b[39m mesh1\u001b[39m.\u001b[39mget_mass_properties()[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\ashikh.a\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stl\\base.py:193\u001b[0m, in \u001b[0;36mBaseMesh.__init__\u001b[1;34m(self, data, calculate_normals, remove_empty_areas, remove_duplicate_polygons, name, speedups, **kwargs)\u001b[0m\n\u001b[0;32m    190\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m data\n\u001b[0;32m    192\u001b[0m \u001b[39mif\u001b[39;00m calculate_normals:\n\u001b[1;32m--> 193\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mupdate_normals()\n",
-      "File \u001b[1;32mc:\\Users\\ashikh.a\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stl\\base.py:315\u001b[0m, in \u001b[0;36mBaseMesh.update_normals\u001b[1;34m(self, update_areas, update_centroids)\u001b[0m\n\u001b[0;32m    313\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mupdate_normals\u001b[39m(\u001b[39mself\u001b[39m, update_areas\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, update_centroids\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    314\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''Update the normals, areas, and centroids for all points'''\u001b[39;00m\n\u001b[1;32m--> 315\u001b[0m     normals \u001b[39m=\u001b[39m numpy\u001b[39m.\u001b[39mcross(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mv1 \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mv0, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mv2 \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mv0)\n\u001b[0;32m    317\u001b[0m     \u001b[39mif\u001b[39;00m update_areas:\n\u001b[0;32m    318\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mupdate_areas(normals)\n",
-      "File \u001b[1;32mc:\\Users\\ashikh.a\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stl\\base.py:237\u001b[0m, in \u001b[0;36mBaseMesh.v1\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    235\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m    236\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mv1\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 237\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvectors[:, \u001b[39m1\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\ashikh.a\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stl\\base.py:213\u001b[0m, in \u001b[0;36mBaseMesh.vectors\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    211\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m    212\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mvectors\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 213\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata[\u001b[39m'\u001b[39;49m\u001b[39mvectors\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb#X12sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m hull \u001b[39m=\u001b[39m ConvexHull(cloud\u001b[39m.\u001b[39mpoints\u001b[39m.\u001b[39mvalues)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb#X12sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Create a mesh from the convex hull\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb#X12sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m mesh \u001b[39m=\u001b[39m numpy_stl\u001b[39m.\u001b[39mmesh\u001b[39m.\u001b[39mMesh(np\u001b[39m.\u001b[39mcolumn_stack(hull\u001b[39m.\u001b[39mpoints[hull\u001b[39m.\u001b[39mvertices]))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb#X12sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39m# Calculate the volume of the mesh\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ashikh/Documents/Projects/NoticeBoard/Master/Master.ipynb#X12sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m volume \u001b[39m=\u001b[39m mesh\u001b[39m.\u001b[39mget_mass_properties()[\u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'numpy_stl' is not defined"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import pyntcloud\n",
-    "import tensorflow as tf\n",
+    "\n",
     "from pyntcloud import PyntCloud\n",
     "import cv2\n",
     "import pandas as pd\n",
     "from scipy.spatial import ConvexHull\n",
-    "\n",
+    "from stl import mesh\n",
     "\n",
     "# Load the segmented depth image as a NumPy array\n",
     "image_path = \"MDE_Masked.jpg\"\n",
@@ -938,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
